--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -30,6 +30,7 @@
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-glider": "^4.0.2",
     "react-is": "^18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
