--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@expo/next-adapter": "^6.0.0",
+    "@sanity/client": "^6.15.17",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.38.0",
     "app": "*",
     "file-loader": "^6.2.0",
-    "next": "^14.1.4",
+    "next": "^14.2.2",
     "next-sanity": "^6.0.5",
     "nextjs-progressbar": "^0.0.16",
     "nextjs-toploader": "^1.6.4",
@@ -33,5 +36,8 @@
     "eslint-config-next": "^14.1.4",
     "tailwind-scrollbar": "3.1.0",
     "tailwindcss": "^3.4.3"
+  },
+  "resolutions": {
+    "get-it": "latest"
   }
 }
