--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@types/react": "^18.2.75",
+    "@types/react": "^18.2.79",
     "@types/react-native": "^0.73.0",
     "eslint": "^9.0.0",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "turbo": "^1.13.2",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.5"
   },
   "scripts": {
     "native": "cd apps/expo && yarn start",
@@ -29,7 +29,7 @@
     "react-native-web": "~0.19.10",
     "solito": "4.2.2",
     "react-native-reanimated-carousel": "4.0.0-alpha.10",
-    "get-it": "latest"
+    "get-it": "^8.4.27"
   },
   "nohoist": [
     "**/expo-router",
