--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -15,18 +15,16 @@
     "@expo/vector-icons": "^14.0.0",
     "@portabletext/react-native": "^1.1.9",
     "@react-navigation/native": "^6.1.7",
-    "@sanity/client": "^6.15.11",
-    "@sanity/vision": "^3.36.4",
     "app": "*",
-    "expo": "~50.0.15",
-    "expo-constants": "~15.4.5",
+    "expo": "~50.0.17",
+    "expo-constants": "~15.4.6",
     "expo-image": "~1.10.6",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
-    "expo-router": "^3.4.7",
+    "expo-router": "~3.4.8",
     "expo-screen-orientation": "~6.4.1",
     "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
+    "expo-system-ui": "~2.9.4",
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,13 +34,11 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "4.0.0-alpha.10",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.10",
-    "sanity": "^3.36.4",
-    "styled-components": "^6.1.8",
+    "react-native-web": "~0.19.11",
     "zustand": "4.5.2"
   },
   "devDependencies": {
