--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -16,35 +16,27 @@
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@expo/next-adapter": "^6.0.0",
     "@next/env": "14.2.2",
-    "@sanity/client": "6.15.20",
-    "@sanity/image-url": "^1.0.2",
-    "@sanity/ui": "2.1.4",
-    "@sanity/vision": "^3.38.0",
     "app": "*",
     "file-loader": "^6.2.0",
-    "next": "^14.2.2",
-    "next-sanity": "^9.0.8",
+    "next": "latest",
     "nextjs-toploader": "^1.6.12",
     "raf": "^3.4.1",
     "react-native-vector-icons-for-web": "^0.1.7",
-    "sanity": "^3.38.0",
     "setimmediate": "^1.0.5",
     "styled-components": "6.1.8",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "vercel": "latest"
   },
   "devDependencies": {
     "@babel/plugin-syntax-flow": "^7.24.1",
-    "@sanity/eslint-config-studio": "^3.0.1",
-    "@types/node": "17.0.21",
-    "@types/styled-components": "^5.1.32",
+    "@sanity/eslint-config-studio": "4.0.0",
+    "@types/node": "^20.12.7",
+    "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.4.19",
-    "babel-plugin-react-native-web": "^0.19.10",
+    "babel-plugin-react-native-web": "^0.19.11",
     "critters": "^0.0.22",
-    "eslint-config-next": "^14.1.4",
+    "eslint-config-next": "^14.2.3",
     "tailwind-scrollbar": "3.1.0",
     "tailwindcss": "^3.4.3"
-  },
-  "resolutions": {
-    "get-it": "latest"
   }
 }
