--- a/apps/next/tsconfig.json
+++ b/apps/next/tsconfig.json
@@ -17,8 +17,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "jsxImportSource": "nativewind",
     "incremental": true,
     "plugins": [
+      {
+        "name": "next/babel"
+      },
       {
         "name": "next"
       }
