--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "devDependencies": {
     "@types/react": "^18.2.79",
     "@types/react-native": "^0.73.0",
-    "eslint": "^9.0.0",
+    "eslint": "^9.1.1",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "turbo": "^1.13.2",
@@ -25,15 +25,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.14.0",
-    "react-native-svg": "15.1.0",
-    "react-native-web": "~0.19.10",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.11",
     "solito": "4.2.2",
     "react-native-reanimated-carousel": "4.0.0-alpha.10",
     "get-it": "^8.4.27"
   },
-  "nohoist": [
-    "**/expo-router",
-    "**/expo-router/**"
-  ],
-  "packageManager": "yarn@4.1.0"
+  "packageManager": "yarn@4.1.0",
+  "dependencies": {
+    "@sanity/client": "latest",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "latest",
+    "sanity": "latest"
+  }
 }
