--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/html-elements": "0.9.1",
     "@expo/vector-icons": "^14.0.0",
+    "@kolking/react-native-rating": "^1.3.0",
     "@portabletext/react-native": "^1.1.9",
     "@react-navigation/native": "^6.1.7",
     "app": "*",
