--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -16,6 +16,7 @@
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@expo/next-adapter": "^6.0.0",
     "@next/env": "14.2.2",
+    "@vercel/analytics": "^1.2.2",
     "app": "*",
     "file-loader": "^6.2.0",
     "next": "latest",
